--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
                                 magna aliqua. Ut enim ad minim veniam.
                             </span>
                         </div>
-                        <button class="footer__btn">Let's Talk</button>
+                        <button id="lets-talk-btn" class="footer__btn">Let's Talk</button>
                     </div>
                     <div class="footer__bot">
                         <div class="footer__info">
@@ -182,6 +182,28 @@
                 </div>
             </div>
         </footer>
+    </div>
+    <div id="lets-talk-popup" class="lets-talk-popup hide">
+        <div id="lets-talk-overlay" class="overlay">
+            <form id="form" class="popup" novalidate>
+                <div class="popup__container">
+                    <div class="popup__title">SEND US MESSAGE</div>
+                    <div class="group">
+                        <label class="popup__label" for="name-input">Full Name</label>
+                        <input name="name" class="popup__input" id="name-input" type="text" placeholder="Your Name">
+                    </div>
+                    <div class="group">
+                        <label class="popup__label" for="email-input">Email</label>
+                        <input name="email" class="popup__input" id="email-input" type="email" placeholder="Your Email">
+                    </div>
+                    <div class="group">
+                        <label class="popup__label" for="message-input">Message</label>
+                        <textarea name="message" class="popup__textarea" id="message-input" placeholder="Your Message"></textarea>
+                    </div>
+                    <button id="submit-btn" class="popup__btn">SUBMIT</button>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
