--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
                     <div class="footer__top">
                         <div class="col">
                             <h2 class="footer__title">
-                                Intersted to work<br>
+                                Interested to work<br>
                                 with our team?
                             </h2>
                             <span class="footer__text">
